--- a/nginx.conf
+++ b/nginx.conf
@@ -6,6 +6,7 @@ server {
 
     listen 80;
     server_name localhost;
+    client_max_body_size 100M;
 
     location / {
         proxy_pass http://ecobasa;
