--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,9 @@ services:
     build: .
     volumes:
     #  - ./src/:/opt/services/ecobasa/
+      - ./media:/opt/services/ecobasa/media
+      - ./static-collected:/opt/services/ecobasa/static-collected
+      - ./whoosh_index:/opt/services/ecobasa/whoosh_index
       - ./settings.py:/opt/services/ecobasa/ecobasa/settings.py
     depends_on:
       - database
@@ -35,8 +38,8 @@ services:
       - ./frontend.env
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./src/static-collected:/opt/services/ecobasa/static
-      - ./src/media:/opt/services/ecobasa/media
+      - ./static-collected:/opt/services/ecobasa/static-collected
+      - ./media:/opt/services/ecobasa/media
     depends_on:
       - django
     networks:
